static/styles/css/style.css
/* ... */
body main .body #lesson .gzamkvlevi-box .gzamkvlevi-content .gzamkvlevi-title {
  background-color: #c1d4d6;
  padding: 1.0625rem;
  margin: 0;
}
body main .body #lesson .gzamkvlevi-box .gzamkvlevi-content .gzamkvlevi-text {
  font-size: 2rem;
  background-color: #e4eeef;
  padding: 1.0625rem 1.0625rem 3.75rem;
}
body main .body #lesson .gzamkvlevi-box .gzamkvlevi-content .gzamkvlevi-text span {
  display: inline-block;
  margin-top: 2rem;
}
body main .body #lesson #daakavshireWrapper .daakavshire {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}
body main .body #lesson #daakavshireWrapper .daakavshire p {
  position: relative;
  font-size: 2rem;
  padding: 0.8rem 2rem 0.8rem 0.8rem;
  border: 1px solid #5890ae;
  border-radius: 0.8rem;
}
body main .body #lesson #daakavshireWrapper .daakavshire .daakavshire_left_block p::after {
  content: "•";
  position: absolute;
  right: -1.8rem;
  font-size: 2em;
  color: #5890ae;
  top: 0;
  pointer-events: none;
}
body main .body #lesson #daakavshireWrapper .daakavshire .daakavshire_right_block p::before {
  content: "•";
  position: absolute;
  left: -1.8rem;
  font-size: 2em;
  color: #5890ae;
  top: 0;
  pointer-events: none;
}
body main .body #lesson .leftSentences {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: #0a2b39;
  font-size: 2rem;
}
body main .body #lesson .leftSentences ol {
  max-width: 34rem;
  line-height: 1.5;
}
body main .body #lesson .leftSentences ol li {
  margin-bottom: 1.8rem;
}
body main .body #lesson .leftSentences .words {
  width: 100%;
  margin-left: 2.8rem;
}
body main .body #lesson .leftSentences .words p {
  text-align: center;
  background-color: #C1D4D6;
  padding: 0.9rem 0.9rem;
}
body main .body #lesson .leftSentences .words .wordsInner {
  padding: 2.5rem 0.9rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  row-gap: 6.25rem;
  background-color: #E4EEEF;
  margin-top: 0.625rem;
}
body main .body #lesson .leftSentences .words .wordsInner .word {
  text-align: center;
  padding: 0.625rem;
  height: 3rem;
  background-color: white;
  margin: 0 auto;
  border: solid 1px #5890AE;
  border-radius: 0.8rem;
}
body main .body #lesson .gridRow3 {
  grid-row: 3;
}
body main .body #lesson .gridRow3 p {
  font-size: 2rem;
  color: #0a2b39;
}
body main .body #lesson .gridRow3 .tableContainer {
  display: table;
  max-width: 42.5rem;
  width: 100%;
  margin: 1rem auto;
  border: 1px solid #707070;
}
body main .body #lesson .gridRow3 .tableContainer .row {
  display: table-row;
}
body main .body #lesson .gridRow3 .tableContainer .cell {
  display: table-cell;
  padding: 0.625rem;
  vertical-align: middle;
  border: 1px solid #707070;
}
body main .body #lesson .gridRow3 .tableContainer .title {
  font-weight: bold;
  margin-bottom: 5px;
  text-align: center;
  background-color: #c1d4d6;
}
body main .body #lesson .gridRow3 .tableContainer .title h4 {
  color: #5890ae;
  font-size: 1.5rem;
}
body main .body #lesson .gridRow3 .tableContainer input {
  background-color: #e4eeef;
  border: none;
  outline: none;
  width: 100%;
  margin-top: 0.5rem;
  padding: 0.8rem;
  font-size: 1rem;
  font-size: 2rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] {
  margin-top: 1rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part1 {
  display: grid;
  grid-template-areas: "p1 p1" "p2 img";
}
body main .body #lesson .waikitxe[class~=პეგასი] .part1 img {
  grid-area: img;
  width: 100%;
  height: auto;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part1 p {
  color: #0a2b39;
  font-size: 2rem;
  margin-bottom: 2rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part1 p:nth-child(1) {
  grid-area: p1;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part1 p:nth-child(2) {
  grid-area: p2;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 {
  display: grid;
  grid-template-areas: "p1 p1" "img1 img2" "p2 p2";
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 p {
  color: #0a2b39;
  font-size: 2rem;
  margin-bottom: 2rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 p:nth-child(1) {
  grid-area: p1;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 p:nth-child(2) {
  grid-area: p2;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 img:nth-child(3) {
  position: relative;
  grid-area: img1;
  height: 10rem;
  left: 70%;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part2 img:nth-child(4) {
  grid-area: img2;
  height: 10rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part3 {
  display: grid;
  grid-template-areas: "p1 p1" "p2 img";
}
body main .body #lesson .waikitxe[class~=პეგასი] .part3 p {
  color: #0a2b39;
  font-size: 2rem;
  margin-bottom: 2rem;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part3 p:nth-child(1) {
  grid-area: p1;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part3 p:nth-child(2) {
  grid-area: p2;
}
body main .body #lesson .waikitxe[class~=პეგასი] .part3 img:nth-child(3) {
  grid-area: img;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}
body main .body #lesson .waikitxe[class~=პეგასი] .fa-solid {
  width: 100%;
  text-align: center;
  font-size: 3rem;
  font-weight: 900;
}
body main .body #lesson .waikitxe[class~=მოგზაური] {
  margin-top: 1rem;
}
body main .body #lesson .waikitxe[class~=მოგზაური] .part1 {
  display: grid;
  grid-template-areas: "p1 p1" "p2 img" "p3 img" "p4 p4";
}
body main .body #lesson .waikitxe[class~=მოგზაური] .part1 img {
  grid-area: img;
}
body main .body #lesson .waikitxe[class~=მოგზაური] .part1 p {
  color: #0a2b39;
  font-size: 2rem;
  margin-bottom: 2rem;
}
/* ... */

